Fixed image representation

--- a/src/app/app.component/app.component.html
+++ b/src/app/app.component/app.component.html
@@ -13,7 +13,7 @@
             <!--md-card-header>
                 <img md-card-avatar src="app/app.component/avatar.jpg">
             </md-card-header-->
-            <img class="mdCardImg md-card-sm-image" src="./VinceBloiseTransparent.png">
+            <img class="mdCardImg md-card-sm-image transparentProfilePic">
             <!--md-card-content>
                 <p>Here is some more content</p>
             </md-card-content-->
