--- a/src/app/personalInterests.component/personalInterests.component.html
+++ b/src/app/personalInterests.component/personalInterests.component.html
@@ -18,7 +18,7 @@
             <i class="material-icons app-toolbar-menu">menu</i>
         </button>
 
-        <img class="mdCardImg md-card-sm-image" src="./MarinBioPic2.png">
+        <img class="mdCardImg md-card-sm-image transparentProfilePic">
 
         <span class="textBottom xxLargerFont">&nbsp;Marin Bloise</span>
 
@@ -44,9 +44,9 @@
                         <ul-->
                             <mat-card class="shadowCard">
                             <!--li style="padding-bottom: 1em;" class="bullet11"><a href="https://en.wikipedia.org/wiki/Gravity%27s_Rainbow"> <img class="mdCardImgInLineBottom md-card-sm-image" src="app/personalInterests.component/GravitysRainbow.png">Diving</a-->
-                            <li style="padding-bottom: 1em;list-style: none;" class="bullet11"><img class="mdCardImgInLineBottom md-card-sm-image" src="./MarinDivingForResume.png"><span style="font-size: xx-large;">Diving</span>
+                            <li style="padding-bottom: 1em;list-style: none;" class="bullet11"><img class="mdCardImgInLineBottom md-card-sm-image marinDivingForResumePic"><span style="font-size: xx-large;">Diving</span>
                                 <ul>
-                                    <li style="list-style: none;"><iframe src="https://player.vimeo.com/video/199844747" width="240" height="427" style="padding-top: 2em;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><img class="mdCardImgInLineBottom md-card-sm-image" style="width:512px;height:342px;" src="app/personalInterests.component/MarinAtMDC.jpg"></li>
+                                    <li style="list-style: none;"><iframe src="https://player.vimeo.com/video/199844747" width="240" height="427" style="padding-top: 2em;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><img class="mdCardImgInLineBottom md-card-sm-image marinAtMDCPic" style="width:512px;height:342px;"></li>
                                     <!--p><a href="https://vimeo.com/199844747">@ Penn State - 1/13/2017</a> from <a href="https://vimeo.com/user2689631">Vincent Bloise</a> on <a href="https://vimeo.com">Vimeo</a>.</p-->
                                     <!--li style="list-style: none;"><img class="mdCardImgInLineBottom md-card-sm-image" style="width:640px;height:427px;" src="app/personalInterests.component/MarinAtMDC.jpg"></li-->
                                 </ul>
@@ -54,31 +54,31 @@
                             </mat-card>
                             <mat-card class="shadowCard">
                             <!--li style="padding-bottom: 1em;" class="bullet11"><a href="https://en.wikipedia.org/wiki/Underworld_(DeLillo_novel)"> <img class="mdCardImgInLineBottom md-card-sm-image" src="./Underworld.png">Underworld, Don DeLillo</a-->
-                                <li style="padding-bottom: 1em;list-style: none;" class="bullet11"><img class="mdCardImgInLineBottom md-card-sm-image" src="./TrackForResume.png"><span style="font-size: xx-large;">Track and Field</span>
+                                <li style="padding-bottom: 1em;list-style: none;" class="bullet11"><img class="mdCardImgInLineBottom md-card-sm-image trackForResumePic"><span style="font-size: xx-large;">Track and Field</span>
                                 <ul>
-                                    <li style="list-style: none;"><iframe src="https://player.vimeo.com/video/126726386" width="640" height="360" style="padding-top: 2em;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><img class="mdCardImgInLineBottom md-card-sm-image" style="width:512px;height:342px;" src="app/personalInterests.component/Springside300MeterHurdles.jpeg"></li>
+                                    <li style="list-style: none;"><iframe src="https://player.vimeo.com/video/126726386" width="640" height="360" style="padding-top: 2em;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><img class="mdCardImgInLineBottom md-card-sm-image springside300MeterHurdlesPic" style="width:512px;height:342px;" ></li>
                                     <!--p><a href="https://vimeo.com/126726386">Delco Championships  - 2015 - 300 Meter Hurdles</a> from <a href="https://vimeo.com/user2689631">Vincent Bloise</a> on <a href="https://vimeo.com">Vimeo</a>.</p-->
                                 </ul>
                             </li>
                             </mat-card>
                             <mat-card class="shadowCard">
-                                <li style="padding-bottom: 1em;list-style: none;" class="bullet11"><img class="mdCardImgInLineBottom md-card-sm-image" style="width:66px;height:48px;" src="app/personalInterests.component/AISSoccer.jpg"><span style="font-size: xx-large;">Soccer</span>
+                                <li style="padding-bottom: 1em;list-style: none;" class="bullet11"><img class="mdCardImgInLineBottom md-card-sm-image aISSoccerPic" style="width:66px;height:48px;"><span style="font-size: xx-large;">Soccer</span>
                                 <ul>
-                                    <li style="list-style: none;"><img class="mdCardImgInLineBottom md-card-sm-image" style="width:720px;height:629px;" src="app/personalInterests.component/MarinAISSoccer.jpg"></li>
+                                    <li style="list-style: none;"><img class="mdCardImgInLineBottom md-card-sm-image marinAISSoccerPic" style="width:720px;height:629px;"></li>
                                     <!--p><a href="https://vimeo.com/126726386">Delco Championships  - 2015 - 300 Meter Hurdles</a> from <a href="https://vimeo.com/user2689631">Vincent Bloise</a> on <a href="https://vimeo.com">Vimeo</a>.</p-->
                                 </ul>
                             </li>
                             </mat-card>
                             <mat-card class="shadowCard">
-                                <li style="padding-bottom: 1em;list-style: none;" class="bullet11"><img class="mdCardImgInLineBottom md-card-sm-image" style="width:68px;height:47px;" src="app/personalInterests.component/HunterJumper.jpg"><span style="font-size: xx-large;">Hunter Jumper Horse Riding</span>
+                                <li style="padding-bottom: 1em;list-style: none;" class="bullet11"><img class="mdCardImgInLineBottom md-card-sm-image hunterJumperPic" style="width:68px;height:47px;"><span style="font-size: xx-large;">Hunter Jumper Horse Riding</span>
                                 <ul>
-                                    <li style="list-style: none;"><img class="mdCardImgInLineBottom md-card-sm-image" style="width:665px;height:885px;" src="app/personalInterests.component/MarinHorseJumping.jpeg"></li>
+                                    <li style="list-style: none;"><img class="mdCardImgInLineBottom md-card-sm-image marinHorseJumpingPic" style="width:665px;height:885px;"></li>
                                     <!--p><a href="https://vimeo.com/126726386">Delco Championships  - 2015 - 300 Meter Hurdles</a> from <a href="https://vimeo.com/user2689631">Vincent Bloise</a> on <a href="https://vimeo.com">Vimeo</a>.</p-->
                                 </ul>
                             </li>
                             </mat-card>
                             <mat-card class="shadowCard">
-                                <li style="padding-bottom: 1em;list-style: none;" class="bullet11"><img class="mdCardImgInLineBottom md-card-sm-image" style="width:68px;height:47px;" src="app/personalInterests.component/FieldGoal.jpg"><span style="font-size: xx-large;">And yes, even football!</span>
+                                <li style="padding-bottom: 1em;list-style: none;" class="bullet11"><img class="mdCardImgInLineBottom md-card-sm-image fieldGoalPic" style="width:68px;height:47px;"><span style="font-size: xx-large;">And yes, even football!</span>
                                 <ul>
                                     <li style="list-style: none;"><iframe src="https://player.vimeo.com/video/64966353" width="640" height="360" style="padding-top: 2em;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                                         <!--p><a href="https://vimeo.com/64966353">Aussie Football Field Goal</a> from <a href="https://vimeo.com/user2689631">Vincent Bloise</a> on <a href="https://vimeo.com">Vimeo</a>.</p>--</li>
@@ -104,10 +104,10 @@
                     <li class="bullet11">Some of my favorite recreational activities</li>
                     <li style="list-style: none;">
                         <ul>
-                            <li style="padding-bottom: 1em;" class="bullet11"><a href="https://en.wikipedia.org/wiki/Longboarding"> <img style="width:275px;height:183px;" class="mdCardImgInLineBottom md-card-sm-image" src="./Longboarding.jpg">Longboarding</a></li>
-                            <li style="padding-bottom: 1em;" class="bullet11"><a href="https://en.wikipedia.org/wiki/Paddleboarding"> <img style="width:275px;height:183px;" class="mdCardImgInLineBottom md-card-sm-image" src="./Paddleboarding.png">Paddleboarding</a></li>
-                            <li style="padding-bottom: 1em;" class="bullet11"><a href="https://en.wikipedia.org/wiki/Skiing"> <img style="width:275px;height:183px;" class="mdCardImgInLineBottom md-card-sm-image" src="./Skiing.jpg">Skiing real fast!</a></li>
-                            <li style="padding-bottom: 1em;" class="bullet11"><a href="https://en.wikipedia.org/wiki/Mountain_biking"> <img style="width:275px;height:183px;" class="mdCardImgInLineBottom md-card-sm-image" src="./MountainBiking.png">Mountain Biking</a></li>
+                            <li style="padding-bottom: 1em;" class="bullet11"><a href="https://en.wikipedia.org/wiki/Longboarding"> <img style="width:275px;height:183px;" class="mdCardImgInLineBottom md-card-sm-image longboardingPic">Longboarding</a></li>
+                            <li style="padding-bottom: 1em;" class="bullet11"><a href="https://en.wikipedia.org/wiki/Paddleboarding"> <img style="width:275px;height:183px;" class="mdCardImgInLineBottom md-card-sm-image paddleboardingPic">Paddleboarding</a></li>
+                            <li style="padding-bottom: 1em;" class="bullet11"><a href="https://en.wikipedia.org/wiki/Skiing"> <img style="width:275px;height:183px;" class="mdCardImgInLineBottom md-card-sm-image skiingPic">Skiing real fast!</a></li>
+                            <li style="padding-bottom: 1em;" class="bullet11"><a href="https://en.wikipedia.org/wiki/Mountain_biking"> <img style="width:275px;height:183px;" class="mdCardImgInLineBottom md-card-sm-image mountainBikingPic">Mountain Biking</a></li>
                         </ul>
                     </li>
                 </ul>
