--- a/src/app/app.component/app.component.css
+++ b/src/app/app.component/app.component.css
@@ -252,6 +252,10 @@ ul {
     background-color: blue;
 }
 
+.transparentProfilePic {
+  content: url("./MarinBioPic2.png");
+}
+
 .inlineDiv {
     display: inline-block;
 }
