--- a/src/app/app.component/app.component2.html
+++ b/src/app/app.component/app.component2.html
@@ -20,7 +20,7 @@
             <i class="material-icons app-toolbar-menu">menu</i>
         </button>
 
-        <img class="mdCardImg md-card-sm-image" src="./MarinBioPic2.png">
+        <img class="mdCardImg md-card-sm-image transparentProfilePic">
 
         <span class="textBottom xxLargerFont">&nbsp;Marin Bloise</span>
 
