--- a/src/app/appComponent/appComponent.html
+++ b/src/app/appComponent/appComponent.html
@@ -1,3 +1,5 @@
-<div class="col-md-9">
-    <router-outlet></router-outlet>
+<div fxLayout="row wrap">  <!--class="col-md-9"-->
+  <div fxFlex>
+    <router-outlet fxFlex></router-outlet>
+  </div>
 </div>
