Upgraded to Angular and Material 7.0.2

--- a/src/app/app.component/app.component2.html
+++ b/src/app/app.component/app.component2.html
@@ -37,7 +37,7 @@
         <mat-card class="shadowCard">
             <h1 class="h1Blue">Objective</h1>
             <ul>
-                <li class="bullet11">Seeking an internship with a leading communications institution, which provides the opportunity to expand my knowledge as a communications major.
+                <li class="bullet11">Seeking an internship with a leading communications institution that provides the opportunity to expand my knowledge as a communications major.
                     My marketing experience and my strong communication skills ensure that I will make a positive contribution to your organization.
                 </li>
             </ul>
